--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  getwidget: ^2.0.4
   flutter:
     sdk: flutter
 
@@ -35,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,17 +75,32 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Oswald
+      fonts:
+        - asset: assets/fonts/Oswald-ExtraLight.ttf
+          weight: 100
+        - asset: assets/fonts/Oswald-Light.ttf
+          weight: 200
+        - asset: assets/fonts/Oswald-Regular.ttf
+          weight: 300
+        - asset: assets/fonts/Oswald-Medium.ttf
+          weight: 400
+        - asset: assets/fonts/Oswald-SemiBold.ttf
+          weight: 500
+        - asset: assets/fonts/Oswald-Bold.ttf
+          weight: 600
+  #  fonts:
+  #     - family: Schyler
+  #        fonts:
+  #         - asset: fonts/Schyler-Regular.ttf
+  #         - asset: fonts/Schyler-Italic.ttf
+  #           style: italic
+  #     - family: Trajan Pro
+  #       fonts:
+  #         - asset: fonts/TrajanPro.ttf
+  #         - asset: fonts/TrajanPro_Bold.ttf
+  #           weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
