--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  getwidget: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -84,6 +85,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  assets:
+    - assets/images/
+  fonts:
+    - family: Oswald-Medium
+      fonts:
+        - asset: assets/fonts/Oswald-Medium.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
