--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^4.0.3
   getwidget: ^3.0.1
+  flutter_svg: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,16 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/home.png
-    - assets/images/menu.png
-    - assets/images/cart.png
-    - assets/images/user.png
-    - assets/images/tk_top.png
-    - assets/images/avatar.jpg
-    - assets/images/flag_vi.png
-    - assets/images/check.png
-    - assets/images/google.png
-    - assets/images/facebook.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
