--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^4.0.3
   getwidget: ^3.0.1
   flutter_svg: ^2.0.1
+  pin_code_fields: ^7.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
