--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   getwidget: ^3.0.1
   flutter_svg: ^2.0.1
   pin_code_fields: ^7.4.0
+  carousel_slider: ^4.2.1
+  intl: ^0.18.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,6 +68,8 @@ flutter:
   assets:
     - assets/images/
     - assets/images/products/
+    - assets/images/page1/
+    - assets/images/page2/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
