--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   pin_code_fields: ^7.4.0
   carousel_slider: ^4.2.1
   intl: ^0.18.0
-
-
+  font_awesome_flutter: ^10.4.0
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
