--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   intl: ^0.18.0
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
