--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   carousel_slider: ^4.2.1
   intl: ^0.18.0
   font_awesome_flutter: ^10.4.0
+  cached_network_image: ^3.2.3
+  
+  shared_preferences: ^2.0.17
+  path_provider: ^2.0.12
+  sqflite: ^2.2.4+1
+  badges: ^3.0.2
+  provider: ^6.0.5
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
