--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^4.0.3
   intl: ^0.18.0
   animations: ^2.0.7
+  http: ^0.13.5
+  dio: ^5.0.0
 
 dev_dependencies:
   flutter_test:
