--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   animations: ^2.0.7
   http: ^0.13.5
   dio: ^5.0.0
+  cached_network_image: ^3.2.3
+  carousel_slider: ^4.2.1
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
