--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   font_awesome_flutter: ^10.4.0
+  flutter_svg: ^2.0.2
 
 dev_dependencies:
   flutter_test:
