--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  getwidget: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  animations: ^2.0.7
+  animated_bottom_navigation_bar: ^1.1.0+1
+  dio: ^5.0.0
+  getwidget: ^2.0.4
+  flutter_riverpod: ^2.1.3
+  riverpod_annotation: ^1.1.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  getwidget: ^2.0.4
+  build_runner:
+  riverpod_generator: ^1.1.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
