--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   carousel_slider: ^4.2.1
   font_awesome_flutter: ^10.4.0
   flutter_svg: ^2.0.2
+  flutter_riverpod: ^2.2.0
 
 dev_dependencies:
   flutter_test:
