--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^4.0.3
-  getwidget: ^3.0.1
   flutter_svg: ^2.0.1
   pin_code_fields: ^7.4.0
   carousel_slider: ^4.2.1
@@ -44,8 +43,12 @@ dependencies:
   sqflite: ^2.2.4+1
   badges: ^3.0.2
   provider: ^6.0.5
+  dio: ^5.0.1
   
   flutter_riverpod: ^2.2.0
+  riverpod_annotation: ^1.2.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,6 +57,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
