--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,19 @@ dependencies:
   flutter_riverpod: ^2.1.3
   riverpod_annotation: ^1.1.1
   intl: ^0.18.0
+  equatable: ^2.0.5
+  material_dialogs: ^1.1.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
+  build_runner: ^2.3.2
   riverpod_generator: ^1.1.1
+  hive_generator: ^2.0.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
